Fix v2 layout bugs (#1845)
* SCSS fixes

* Fix instruction widget line breaks

* Reinstate license info footer

* Fix img in ol in web-dev-components

* Remove java comment in footer.

--- a/src/styles/generic/_blockquote.scss
+++ b/src/styles/generic/_blockquote.scss
@@ -18,7 +18,7 @@ blockquote {
 
   p {
     font: inherit;
-    margin-bottom: 18px;
+    margin: 0 0 18px;
   }
 
   cite {
@@ -35,4 +35,5 @@ blockquote::before {
   content: 'format_quote';
   float: left;
   margin: 4px 0 0 -48px;
+  transform: scaleX(-1);
 }
